# healthbench-judge-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
results/: ablation_judge_oracle_information.csv  ablation_judge_oracle_information.md  ablation_judge_oracle_information_haiku.csv  ablation_judge_oracle_information_haiku.md  anthropic_claude-haiku-4-5-20251001.md  openai_gpt-4o-mini.md  prompt_ab_confound_openai_gpt-4o-mini.md
scripts/: _helpers.py  run_ablation.py  run_judges.py  run_prompt_ab.py
